Refactoring ToStringbuilder - work in progress...